--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 </body>
 
 <footer class="intake-foot">
-    <a class="copyRight" href="copyRight.html">Copyright &copy;2024 Itz<span class="red">4</span>u</a><a class="copyRight" href="index.html"> HOME</a>
+    <a class="copyRight" href="copyRight.html">Copyright &copy;2024 Itz<span class="red">4</span>u</a><a class="copyRight" href="homePg.html"> HOME</a>
     <br>
     <a class="copyRight" href="term_of_service.html">Terms of Service /</a>
     <a class="copyRight" href="privacy-policy.html">Privacy Policy</a>
